crates/cruster/tests/ui/missing_trait_with.stderr
error[E0277]: the trait bound `LoggingEntity: Entity` is not satisfied
  --> tests/ui/missing_trait_with.rs:32:21
   |
32 |     assert_entity::<LoggingEntity>();
   |                     ^^^^^^^^^^^^^ the trait `Entity` is not implemented for `LoggingEntity`
   |
   = help: the trait `Entity` is implemented for `LoggingEntityWithTraits`
note: required by a bound in `assert_entity`
  --> tests/ui/missing_trait_with.rs:29:21
   |
29 | fn assert_entity<T: Entity>() {}
   |                     ^^^^^^ required by this bound in `assert_entity`
